--- a/config/config.json
+++ b/config/config.json
@@ -1,6 +1,6 @@
 {
   "site": {
-    "title": "Bigspring Light Nextjs",
+    "title": "Roghtech Solutions",
     "base_url": "/",
     "favicon": "/images/favicon.png",
     "logo": "/images/RoghTechLogo_page-0001.jpg",
